tests/netconvert/import/XML/errors/broken_edge/edge#length__false1/errors.netconvert
Error: Attribute 'length' in definition of edge '1' Invalid Number Format .
Quitting (on error).
